unpackaged/main/default/objects/Contact/fields/Advocacy_No__c.field-meta.xml
<CustomField>
    <fullName>Advocacy_No__c</fullName>
    <label>Advocacy No</label>
    <summaryForeignKey>Advocacy__c.Surgeon_Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>