unpackaged/main/default/objects/Contact/fields/Advocacy_Status__c.field-meta.xml
<CustomField>
    <fullName>Advocacy_Status__c</fullName>
    <formula>if( Advocacy_No__c &gt; 0, 

 IMAGE(&quot;https://c.na12.content.force.com/servlet/servlet.FileDownload?file=015U0000002SvLC&quot;, &quot;Heart&quot;) , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>&quot;Heart&quot; = Done advocacy</inlineHelpText>
    <label>Advocacy Status</label>
    <type>Text</type>
</CustomField>