unpackaged/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Surgeon</fullName>
            </value>
            <value>
                <fullName>Microbiologists</fullName>
            </value>
            <value>
                <fullName>Theatre manager</fullName>
            </value>
            <value>
                <fullName>Registrar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>