unpackaged/main/default/objects/Contact/fields/DupInd__c.field-meta.xml
<CustomField>
    <fullName>DupInd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DupInd</label>
    <type>Checkbox</type>
</CustomField>