unpackaged/main/default/objects/Contact/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <inlineHelpText>When marked as historic, sales rep. no longer works for the distributor.  The record is maintained in Salesforce to protect historic data.</inlineHelpText>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Historic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>