unpackaged/main/default/objects/Contact/fields/Historic_Since__c.field-meta.xml
<CustomField>
    <fullName>Historic_Since__c</fullName>
    <description>Date when Contact was set as Historic.</description>
    <label>Historic Since</label>
    <type>Date</type>
</CustomField>