unpackaged/main/default/objects/Contact/fields/I_D__c.field-meta.xml
<CustomField>
    <fullName>I_D__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I&amp;D</label>
    <type>Checkbox</type>
</CustomField>