unpackaged/main/default/objects/Contact/fields/Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Role__c</fullName>
    <label>Job Role</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Account_type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Procurement/Purchasing Officer</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Dentist</fullName>
            </value>
            <value>
                <fullName>Microbiologist</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Theatre / OR Manager</fullName>
            </value>
            <value>
                <fullName>Theatre / OR Nurse</fullName>
            </value>
            <value>
                <fullName>Theatre / OR Support</fullName>
            </value>
            <value>
                <fullName>Field Marketing Specialist</fullName>
            </value>
            <value>
                <fullName>Finance Officer</fullName>
            </value>
            <value>
                <fullName>Inventory Officer</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Sales Representative</fullName>
            </value>
            <value>
                <fullName>Tissue Viabilty Nurse Acute</fullName>
            </value>
            <value>
                <fullName>Tissue Viabilty Nurse Community</fullName>
            </value>
            <value>
                <fullName>Surgeon Podiatry</fullName>
            </value>
            <value>
                <fullName>Surgeon Orthopaedic</fullName>
            </value>
            <value>
                <fullName>Surgeon Specialist Orthopaedic</fullName>
            </value>
            <value>
                <fullName>Surgeon Vascular</fullName>
            </value>
            <value>
                <fullName>Surgeon General</fullName>
            </value>
            <value>
                <fullName>Surgeon Oncology</fullName>
            </value>
            <value>
                <fullName>Surgeon Plastics</fullName>
            </value>
            <value>
                <fullName>Diabetic Specialist Nurse</fullName>
            </value>
            <value>
                <fullName>Medicines Manager</fullName>
            </value>
            <value>
                <fullName>Medicines Optimisation Mgr</fullName>
            </value>
            <value>
                <fullName>Podiatry Nurse Lead Acute</fullName>
            </value>
            <value>
                <fullName>Podiatry Nurse Lead Community</fullName>
            </value>
            <value>
                <fullName>Diabetic Nurse Lead Community</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>