unpackaged/main/default/objects/Contact/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Inventory Planner</fullName>
            </value>
            <value>
                <fullName>Logistics Coordinator</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Sales Representative</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Managing Director</fullName>
            </value>
            <value>
                <fullName>Consultant Orthopaedic Surgeon</fullName>
            </value>
            <value>
                <fullName>Dentist</fullName>
            </value>
            <value>
                <fullName>Microbiologist</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Professor of Orthopaedics</fullName>
            </value>
            <value>
                <fullName>Registrar</fullName>
            </value>
            <value>
                <fullName>Theatre Manager</fullName>
            </value>
            <value>
                <fullName>Theatre Nurse</fullName>
            </value>
            <value>
                <fullName>Theatre Staff</fullName>
            </value>
            <value>
                <fullName>Theatre Stores</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>