unpackaged/main/default/objects/Contact/fields/Key_Influencer__c.field-meta.xml
<CustomField>
    <fullName>Key_Influencer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Stakeholder who has significant influence over the buying decision.</inlineHelpText>
    <label>Key Influencer</label>
    <type>Checkbox</type>
</CustomField>