unpackaged/main/default/objects/Contact/fields/Max_Compliance_Score__c.field-meta.xml
<CustomField>
    <fullName>Max_Compliance_Score__c</fullName>
    <label>Max Compliance Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>