unpackaged/main/default/objects/Contact/fields/Number_of_hospital_records_contact__c.field-meta.xml
<CustomField>
    <fullName>Number_of_hospital_records_contact__c</fullName>
    <label>Number of hospital records (contact)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>