unpackaged/main/default/objects/Contact/fields/Open_Fractures__c.field-meta.xml
<CustomField>
    <fullName>Open_Fractures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Fractures</label>
    <type>Checkbox</type>
</CustomField>