unpackaged/main/default/objects/Contact/fields/Other_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Other_Specialty__c</fullName>
    <label>Specialty if &#39;Other&#39; selected</label>
    <length>40</length>
    <type>Text</type>
</CustomField>