unpackaged/main/default/objects/Contact/fields/Parent_Country__c.field-meta.xml
<CustomField>
    <fullName>Parent_Country__c</fullName>
    <formula>TEXT(Account.Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Country</label>
    <type>Text</type>
</CustomField>