unpackaged/main/default/objects/Contact/fields/Parent_Region__c.field-meta.xml
<CustomField>
    <fullName>Parent_Region__c</fullName>
    <formula>TEXT(Account.Sales_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Region</label>
    <type>Text</type>
</CustomField>