unpackaged/main/default/objects/Contact/fields/Parent_Territory__c.field-meta.xml
<CustomField>
    <fullName>Parent_Territory__c</fullName>
    <formula>TEXT(Account.Territory__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Territory</label>
    <type>Text</type>
</CustomField>