unpackaged/main/default/objects/Contact/fields/Referer_Name__c.field-meta.xml
<CustomField>
    <fullName>Referer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Surgeons Referred</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>