unpackaged/main/default/objects/Contact/fields/Regular_User__c.field-meta.xml
<CustomField>
    <fullName>Regular_User__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For UK incentive scheme purposes. Defined as 6 Stimulan cases per quarter.</inlineHelpText>
    <label>Regular User</label>
    <type>Checkbox</type>
</CustomField>