unpackaged/main/default/objects/Contact/fields/Rep_ID__c.field-meta.xml
<CustomField>
    <fullName>Rep_ID__c</fullName>
    <formula>if(
OR ( TEXT(Job_Role__c) = &quot;Owner&quot;, TEXT(Job_Role__c) = &quot;Sales Manager&quot;, TEXT(Job_Role__c) = &quot;Sales Representative&quot; ) = TRUE,
UniqueID__c, &quot;N/A&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rep ID</label>
    <type>Text</type>
</CustomField>