unpackaged/main/default/objects/Contact/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <label>Sales Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>North East</fullName>
            </value>
            <value>
                <fullName>North West</fullName>
            </value>
            <value>
                <fullName>South East</fullName>
            </value>
            <value>
                <fullName>South West</fullName>
            </value>
            <value>
                <fullName>Mid West</fullName>
            </value>
            <value>
                <fullName>Mid Atlantic</fullName>
            </value>
            <value>
                <fullName>South Central</fullName>
            </value>
            <value>
                <fullName>West Central</fullName>
            </value>
            <value>
                <fullName>North Central</fullName>
            </value>
            <value>
                <fullName>Florida</fullName>
            </value>
            <value>
                <fullName>North Atlantic</fullName>
            </value>
            <value>
                <fullName>Wilmington</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>