unpackaged/main/default/objects/Contact/fields/Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team__c</fullName>
    <label>Sales Team</label>
    <length>20</length>
    <type>Text</type>
</CustomField>