unpackaged/main/default/objects/Contact/fields/Secretary_Email__c.field-meta.xml
<CustomField>
    <fullName>Secretary_Email__c</fullName>
    <label>Secretary Email</label>
    <type>Email</type>
</CustomField>