unpackaged/main/default/objects/Contact/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Job_Role__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>General Surgery</fullName>
            </value>
            <value>
                <fullName>Neurosurgery</fullName>
            </value>
            <value>
                <fullName>Oral &amp; Maxillofacial Surgery</fullName>
            </value>
            <value>
                <fullName>Paediatric Surgery</fullName>
            </value>
            <value>
                <fullName>Plastic Surgery</fullName>
            </value>
            <value>
                <fullName>Trauma &amp; Orthopaedic Surgery</fullName>
            </value>
            <value>
                <fullName>Microbiologist</fullName>
            </value>
            <value>
                <fullName>Total Joint Recon</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
            <value>
                <fullName>Foot &amp; Ankle</fullName>
            </value>
            <value>
                <fullName>Spine</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>