unpackaged/main/default/objects/Contact/fields/Stage_1__c.field-meta.xml
<CustomField>
    <fullName>Stage_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stage 1</label>
    <type>Checkbox</type>
</CustomField>