unpackaged/main/default/objects/Contact/fields/Stage_2__c.field-meta.xml
<CustomField>
    <fullName>Stage_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stage 2</label>
    <type>Checkbox</type>
</CustomField>