unpackaged/main/default/objects/Contact/fields/STIMULAN_Beads__c.field-meta.xml
<CustomField>
    <fullName>STIMULAN_Beads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STIMULAN Beads</label>
    <type>Checkbox</type>
</CustomField>