unpackaged/main/default/objects/Contact/fields/STIMULAN_Bullets__c.field-meta.xml
<CustomField>
    <fullName>STIMULAN_Bullets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STIMULAN Bullets</label>
    <type>Checkbox</type>
</CustomField>