unpackaged/main/default/objects/Contact/fields/STIMULAN_Details__c.field-meta.xml
<CustomField>
    <fullName>STIMULAN_Details__c</fullName>
    <formula>IF(  STIMULAN_Paste__c  = TRUE, &quot;STIMULAN Paste, &quot;,Null) +
IF( STIMULAN_Beads__c  = TRUE, &quot;STIMULAN Beads, &quot;, Null)+
IF( STIMULAN_Bullets__c  = TRUE, &quot;STIMULAN Bullets&quot;,Null)</formula>
    <label>STIMULAN Details</label>
    <type>Text</type>
</CustomField>