unpackaged/main/default/objects/Contact/fields/STIMULAN_Paste__c.field-meta.xml
<CustomField>
    <fullName>STIMULAN_Paste__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STIMULAN Paste</label>
    <type>Checkbox</type>
</CustomField>