unpackaged/main/default/objects/Contact/fields/STIMULAN_User__c.field-meta.xml
<CustomField>
    <fullName>STIMULAN_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STIMULAN User</label>
    <type>Checkbox</type>
</CustomField>