unpackaged/main/default/objects/Contact/fields/Sub_Specialty_2__c.field-meta.xml
<CustomField>
    <fullName>Sub_Specialty_2__c</fullName>
    <label>Sub Specialty 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Specialty__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Breast</fullName>
            </value>
            <value>
                <fullName>Colorectal</fullName>
            </value>
            <value>
                <fullName>Endocrine</fullName>
            </value>
            <value>
                <fullName>Upper Gastrointestinal</fullName>
            </value>
            <value>
                <fullName>Transplant</fullName>
            </value>
            <value>
                <fullName>Vascular</fullName>
            </value>
            <value>
                <fullName>Paediatric neurosurgery</fullName>
            </value>
            <value>
                <fullName>Neuro-oncology</fullName>
            </value>
            <value>
                <fullName>Functional neurosurgery</fullName>
            </value>
            <value>
                <fullName>Head injury</fullName>
            </value>
            <value>
                <fullName>Neurovascular surgery</fullName>
            </value>
            <value>
                <fullName>Skull-base surgery</fullName>
            </value>
            <value>
                <fullName>Spinal surgery</fullName>
            </value>
            <value>
                <fullName>Head and neck oncology</fullName>
            </value>
            <value>
                <fullName>Adult facial deformity</fullName>
            </value>
            <value>
                <fullName>Orthognathic surgery</fullName>
            </value>
            <value>
                <fullName>Cleft surgery</fullName>
            </value>
            <value>
                <fullName>Facial trauma management</fullName>
            </value>
            <value>
                <fullName>Neonatal surgery</fullName>
            </value>
            <value>
                <fullName>Urological surgery</fullName>
            </value>
            <value>
                <fullName>Hepatobiliary surgery</fullName>
            </value>
            <value>
                <fullName>GI surgery</fullName>
            </value>
            <value>
                <fullName>Oncological surgery</fullName>
            </value>
            <value>
                <fullName>Skin and soft tissue</fullName>
            </value>
            <value>
                <fullName>Hand and Upper limb</fullName>
            </value>
            <value>
                <fullName>Head and neck</fullName>
            </value>
            <value>
                <fullName>asethetic or cosmetic surgery</fullName>
            </value>
            <value>
                <fullName>Lower Limb joint reconstruction</fullName>
            </value>
            <value>
                <fullName>Hip surgery</fullName>
            </value>
            <value>
                <fullName>Knee surgery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>