unpackaged/main/default/objects/Contact/fields/Surgeon_Code__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Code__c</fullName>
    <externalId>true</externalId>
    <label>Surgeon Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>