unpackaged/main/default/objects/Contact/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <inlineHelpText>Sales Forecast Per Month</inlineHelpText>
    <label>Sales Forecast</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>