unpackaged/main/default/objects/Contact/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>Canada &amp; South America</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>