unpackaged/main/default/objects/Contact/fields/Ultimate_Objective__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Objective__c</fullName>
    <label>Ultimate Objective</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>