unpackaged/main/default/objects/Contact/fields/Ultimate_Objective_Notes__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Objective_Notes__c</fullName>
    <label>Ultimate Objective Notes</label>
    <type>TextArea</type>
</CustomField>