unpackaged/main/default/objects/Contact/fields/UniqueID__c.field-meta.xml
<CustomField>
    <fullName>UniqueID__c</fullName>
    <displayFormat>R{00000}</displayFormat>
    <externalId>true</externalId>
    <label>UniqueID</label>
    <type>AutoNumber</type>
</CustomField>