unpackaged/main/default/objects/Contact/fields/Voids__c.field-meta.xml
<CustomField>
    <fullName>Voids__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voids</label>
    <type>Checkbox</type>
</CustomField>