unpackaged/main/default/objects/Contact/validationRules/Historic_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Historic_Date_Check</fullName>
    <active>true</active>
    <description>Ensures that the Historic From field has a value if the Contact is set as Historic.  Also ensures that the date is empty when a Contact is set as Current.</description>
    <errorConditionFormula>OR
(
AND (TEXT(Employment_Status__c) = &#39;Historic&#39;,  TEXT(Historic_Since__c) = &#39;&#39;)
,
AND (TEXT(Employment_Status__c) = &#39;Current&#39;,  TEXT(Historic_Since__c) &lt;&gt; &#39;&#39;)
)</errorConditionFormula>
    <errorDisplayField>Employment_Status__c</errorDisplayField>
    <errorMessage>Invalid combination of Employment Status / Historic From</errorMessage>
</ValidationRule>