unpackaged/main/default/objects/Contact/listViews/Jonathan_s_Contacts.listView-meta.xml
<ListView>
    <fullName>Jonathan_s_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Jonathan</value>
    </filters>
    <label>Jonathan&#39;s Contacts</label>
    <sharedTo>
        <role>Biocomposites_Manager</role>
    </sharedTo>
</ListView>