unpackaged/main/default/objects/Contact/listViews/Scotland_UK_Contacts.listView-meta.xml
<ListView>
    <fullName>Scotland_UK_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent_Region__c</field>
        <operation>equals</operation>
        <value>Scotland</value>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Contact</value>
    </filters>
    <label>Scotland UK Contacts</label>
</ListView>